--- a/django-geode-geocoding/MANIFEST.in
+++ b/django-geode-geocoding/MANIFEST.in
@@ -1,9 +1,9 @@
 include LICENSE
 include README.rst
-recursive-include geocoding/static *
-recursive-include geocoding/templates *
-recursive-include geocoding/Arcgis *
-recursive-include geocoding/Bing *
-recursive-include geocoding/BXL *
-recursive-include geocoding/Google *
-recursive-include geocoding/OSM *
+recursive-include geode_geocoding/static *
+recursive-include geode_geocoding/templates *
+recursive-include geode_geocoding/Arcgis *
+recursive-include geode_geocoding/Bing *
+recursive-include geode_geocoding/BXL *
+recursive-include geode_geocoding/Google *
+recursive-include geode_geocoding/OSM *
